# DPT-Lisp

./: .gitignore  README.md  makefile
.github/workflows/: blank.yml  build-web.yml  build.yml  test.yml
dpt_lisp/: Cargo.toml
dpt_lisp/src/: builtin.rs  error.rs  interpreter.rs  lib.rs  main.rs  parse.rs  std.lsp  type_check.rs
dpt_lisp_web/: Cargo.toml  index.html  index.scss  makefile
dpt_lisp_web/src/: main.rs
paper/: .#.gitignore  .gitignore  bibliography.bib  makefile  paper.tex  v.lsp
tests/: enum_tests.lsp  file2.lsp  hello_world.lsp  mut_rec.lsp  pair_tests.lsp
