[package]
name = "dpt_lisp"
version = "0.1.0"
authors = ["Matthew Bartlett <endercreeper92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap   = { version = "3.0.5", features = ["suggestions","color",
			 	 	 				 	 									 	  "regex","wrap_help",
																					"unicode","env",
																					"derive"] }
anyhow = "^1.0"
nom 	 = "^7"
nom_locate = "^4"
rustyline = "9.1.2"
regex = "^1"
lazy_static = "^1"