[package]
name = "dpt_lisp_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
yew = "0.19"
dpt_lisp = { path = "../dpt_lisp" }
web-sys = {version = "0.3", features = ["InputEvent"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["rlib", "cdylib"]